# blockchain_scanner

./: .gitignore  .gitignore_uniq  CHANGELOG.md  README.md  alerting.py  babyswap_source.json  campaign_source.sol  clean_hardhat.bat  config.yaml  dump_results.py  dynamic_test_generator.py  eth_contract_source.sol  exploit_generator.py  exploit_pipeline.py  guardian.py  hardhat_fork_tester.py  main.py  mine_abi_functions.py  mythril-0.8.0-py2.py3-none-any.whl  nola_source.sol  pool_scan_results.json  pool_scanner.py  pre-commit.bat  pyproject.toml  requirements.txt  run_forever.bat  run_forever.sh  run_guardian.bat  run_guardian.sh  scan_bsc_500.py  scan_bsc_recent.py  scan_historical.py  setup.py  smolcoin_source.sol  stats_patterns.py  test_aidoge_rpc.py  test_mythril_patterns.py  verify.py
.github/workflows/: ci.yml  release.yml
.mythril-env/: pyvenv.cfg
.mythril-env/Scripts/: activate  activate.bat
analysis/: vulnerability_scanner.py
confirmators/: __init__.py  mythril_confirmator.py  slither_confirmator.py
dashboard/: app.py
dashboard/templates/: index.html
exploit/: aidoge_0x09e18590_source.json  fetch_sources.py  hardhat.config.js  package-lock.json  package.json  prismhook_0xbd3ab585_source.json  test_aidoge_fork.js  test_prismhook_fork.js
exploit/contracts/: Exploit.sol  (+12 more)
filters/: __init__.py  filters.py
findings/: README.md  abi_functions_mined.json  campaign_wrapper.md  pattern_stats.json  scanned_contracts.md
hooks/: pre-commit
output/: __init__.py  display.py
scanner/: __init__.py  base.py  bitcoin_scanner.py  evm_scanner.py  orchestrator.py  solana_scanner.py
skill/: multi-chain-blockchain-scanner.md
(+11 files in other folders)
