[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchain-scanner"
version = "1.0.1"
description = "Multi-Chain Blockchain Transaction Scanner — real-time monitoring across 6 blockchains with Solidity vulnerability scanning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "blockchain-scanner" },
]
keywords = ["blockchain", "scanner", "ethereum", "bsc", "security", "solidity", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "web3>=7.0.0",
    "solana>=0.34.0",
    "solders>=0.21.0",
    "websockets>=12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/reuniware/blockchain_scanner"
Repository = "https://github.com/reuniware/blockchain_scanner"

[project.scripts]
blockchain-scanner = "main:main"
guardian = "guardian:main"
exploit-pipeline = "exploit_pipeline:main"
pool-scanner = "pool_scanner:main"

[tool.setuptools.packages.find]
include = ["scanner*", "analysis*", "filters*", "output*", "confirmators*"]
